test/data/pass/argv.z
fn main(argc: int, argv: [string]) -> int {
	printf("%i\n", argc);
	printf("%s\n", argv[1]);

	return 0;
}
