test/data/fail/bad-type.z
fn add(a: int, b: int) -> badtype {

	if a == b {
		printf("Hello!\n");
	}
	return a+b;
}

printf("%i\n", add("string", 1));
